Bug 746120 - Transform the root layer even if not scrollable so it doesn't cause separation of layers. r=ajuma